cpp/hamming/run-tests-cpp.txt
Running automated test file(s):


===============================================================================

Running: make clean
rm -rf ./build

real	0m0.007s
user	0m0.001s
sys	0m0.005s

===============================================================================

export LDFLAGS="-lgcov --coverage" CXXFLAGS="--coverage"

===============================================================================

Running: make coverage | ansifilter
rm -rf ./build
mkdir -pv ./build
mkdir: created directory './build'

cd ./build; export LDFLAGS="-lgcov --coverage" CXXFLAGS="--coverage"; cmake -DEXERCISM_RUN_ALL_TESTS=1 -DCMAKE_EXPORT_COMPILE_COMMANDS=1 -G 'Unix Makefiles' ../; if make; then printf "\n=== All Tests Passed ===\n"; else printf "\n=== Test Failure ===\n"; false; fi
-- The CXX compiler identification is GNU 10.2.1
-- Detecting CXX compiler ABI info
-- Detecting CXX compiler ABI info - done
-- Check for working CXX compiler: /usr/bin/c++ - skipped
-- Detecting CXX compile features
-- Detecting CXX compile features - done
-- Configuring done
-- Generating done
-- Build files have been written to: /home/vpayno/git_vpayno/exercism-workspace/cpp/hamming/build
make[1]: Entering directory '/home/vpayno/git_vpayno/exercism-workspace/cpp/hamming/build'
make[2]: Entering directory '/home/vpayno/git_vpayno/exercism-workspace/cpp/hamming/build'
make[3]: Entering directory '/home/vpayno/git_vpayno/exercism-workspace/cpp/hamming/build'
make[3]: Leaving directory '/home/vpayno/git_vpayno/exercism-workspace/cpp/hamming/build'
make[3]: Entering directory '/home/vpayno/git_vpayno/exercism-workspace/cpp/hamming/build'
[ 25%] Building CXX object CMakeFiles/hamming.dir/hamming_test.cpp.o
[ 50%] Building CXX object CMakeFiles/hamming.dir/hamming.cpp.o
[ 75%] Building CXX object CMakeFiles/hamming.dir/test/tests-main.cpp.o
[100%] Linking CXX executable hamming
make[3]: Leaving directory '/home/vpayno/git_vpayno/exercism-workspace/cpp/hamming/build'
[100%] Built target hamming
make[3]: Entering directory '/home/vpayno/git_vpayno/exercism-workspace/cpp/hamming/build'
make[3]: Leaving directory '/home/vpayno/git_vpayno/exercism-workspace/cpp/hamming/build'
make[3]: Entering directory '/home/vpayno/git_vpayno/exercism-workspace/cpp/hamming/build'
===============================================================================
All tests passed (9 assertions in 9 test cases)

make[3]: Leaving directory '/home/vpayno/git_vpayno/exercism-workspace/cpp/hamming/build'
[100%] Built target test_hamming
make[2]: Leaving directory '/home/vpayno/git_vpayno/exercism-workspace/cpp/hamming/build'
make[1]: Leaving directory '/home/vpayno/git_vpayno/exercism-workspace/cpp/hamming/build'

=== All Tests Passed ===

find . -regextype posix-egrep -regex "^.*(tests-main|CompilerId).*[.](gcda|gcno)$" -print -delete
./build/CMakeFiles/3.22.2/CompilerIdCXX/CMakeCXXCompilerId.gcno
./build/CMakeFiles/hamming.dir/test/tests-main.cpp.gcno
./build/CMakeFiles/hamming.dir/test/tests-main.cpp.gcda

find . -regextype posix-egrep -regex "^.*[.](gcda|gcno)15029"

gcovr --print-summary
------------------------------------------------------------------------------
                           GCC Code Coverage Report
Directory: .
------------------------------------------------------------------------------
File                                       Lines    Exec  Cover   Missing
------------------------------------------------------------------------------
hamming.cpp                                   17      15    88%   9,13
hamming_test.cpp                              27      27   100%   
test/catch.hpp                                32      27    84%   1642-1643,2227,2229,2560
------------------------------------------------------------------------------
TOTAL                                         76      69    90%
------------------------------------------------------------------------------
lines: 90.8% (69 out of 76)
branches: 39.4% (85 out of 216)

real	0m9.700s
user	0m8.880s
sys	0m0.815s

===============================================================================

cmake-format --in-place CMakeLists.txt
WARNING config_util.py:307: The following configuration options were ignored:
  max_subargs_per_line

real	0m0.161s
user	0m0.106s
sys	0m0.057s

===============================================================================

cmake-lint CMakeLists.txt
WARNING The following configuration options were ignored:
  max_subargs_per_line
CMakeLists.txt
==============
CMakeLists.txt:15,06: [C0103] Invalid directory variable name "exercise_cpp" doesn't match `[A-Z][0-9A-Z_]+|_[0-9a-z_]+`
CMakeLists.txt:17,06: [C0103] Invalid directory variable name "exercise_cpp" doesn't match `[A-Z][0-9A-Z_]+|_[0-9a-z_]+`
CMakeLists.txt:61,02: [C0113] Missing COMMENT in statement which allows it

Summary
=======
files scanned: 1
found lint:
  Convention: 3


real	0m0.169s
user	0m0.124s
sys	0m0.047s

===============================================================================

Running: clang-format-16 -style=file -i ./hamming.cpp ./hamming_test.cpp ./hamming.h

real	0m0.019s
user	0m0.011s
sys	0m0.008s

===============================================================================

Running: ../../.github/citools/cpp/clang-check
clang-check-16 --analyze ./hamming.cpp ./hamming_test.cpp ./hamming.h
error: argument unused during compilation: '-stdlib=libstdc++' [-Werror,-Wunused-command-line-argument]
error: invalid argument '-std=c++17' not allowed with 'C'
/home/vpayno/git_vpayno/exercism-workspace/cpp/hamming/hamming.h:6:10: fatal error: 'stdexcept' file not found
#include <stdexcept>
         ^~~~~~~~~~~
1 error generated.
Error while processing /home/vpayno/git_vpayno/exercism-workspace/cpp/hamming/hamming.h.

real	0m0.523s
user	0m0.493s
sys	0m0.030s


real	0m0.525s
user	0m0.494s
sys	0m0.030s

===============================================================================

Running: ../../.github/citools/cpp/clang-tidy | head -n 100
11417 warnings generated.
46801 warnings generated.
46801 warnings and 3 errors generated.
Error while processing /home/vpayno/git_vpayno/exercism-workspace/cpp/hamming/hamming.h.
Suppressed 46806 warnings (46801 in non-user code, 5 NOLINT).
Use -header-filter=.* to display errors from all non-system headers. Use -system-headers to display errors from system headers as well.
Found compiler error(s).

real	0m6.450s
user	0m6.376s
sys	0m0.073s
Running: clang-tidy-16 ./hamming.cpp ./hamming_test.cpp ./hamming.h
error: invalid argument '-std=c++17' not allowed with 'C' [clang-diagnostic-error]
error: argument unused during compilation: '-stdlib=libstdc++' [clang-diagnostic-unused-command-line-argument]
/home/vpayno/git_vpayno/exercism-workspace/cpp/hamming/hamming.h:6:10: error: 'stdexcept' file not found [clang-diagnostic-error]
#include <stdexcept>
         ^~~~~~~~~~~


real	0m6.452s
user	0m6.376s
sys	0m0.077s

===============================================================================

